[package]
name = "cacher_wasm"
version = "0.1.0"
authors = ["alpertunga-bile <kingdom19online@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.39"
strum = "0.26.3"
strum_macros = "0.26.4"
serde = { version = "1.0.217", features = ["derive"] }
lz-str = "0.2.1"
bincode = "1.3.3"
lz4_flex = "0.11.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
