[package]
name = "cacher_wasm"
version = "0.1.0"
authors = ["alpertunga-bile <kingdom19online@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
chrono = "0.4.39"
strum = "0.26.3"
strum_macros = "0.27.0"
serde = { version = "1.0.217", features = ["derive"] }
lz-str = "0.2.1"
bincode = "1.3.3"
lz4_flex = "0.11.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "z"
lto=true
